--- a/UserLevels/pages/pages/pages01/runPage.html
+++ b/UserLevels/pages/pages/pages01/runPage.html
@@ -40,10 +40,10 @@
 				<span>DEVELOPER</span>
 			</davinci-button>
 		</stacked-pane>
-		<local-binding property="value" name="currentuser" converter="getUserId"></local-binding>
+		<local-binding property="value" name="currentuser" update-on-resume converter="getUserId"></local-binding>
 	</stacked-view>
 	<davinci-button id="Button9" type="primary">
 		<span>Active when user >= Operator</span>
-		<local-binding property="disabled" name="currentuser" converter="getDisabled"></local-binding>
+		<local-binding property="disabled" name="currentuser" update-on-resume converter="getDisabled"></local-binding>
 	</davinci-button>
 </layout-row>
